Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4899

Http2ClientSession object leaks

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 7.0.0
    • HTTP, HTTP/2
    • None

    Description

      Running master plus proposed fix for TS-4813 (without this fix, traffic_server crashes very quickly).

      After a short time (10 minutes), I noticed that the process memory utilization was growing. I took the machine out of rotation and waited for existing connections to drain. The memory use summary from SIGUSR1 shows that many (most?) Http2ClientSession, Http2Stream, and Http1ClientSession objects are not being freed.

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m