TS-4899: Http2ClientSession object leaks.